# CognitionFlow

./: .dockerignore  .env.example  .gitignore  CognitionFlow.ipynb  Dockerfile  Fixed_CognitionFlow (1).ipynb  README.md  incident_report.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  db.py  main.py
api/static/: index.html
api/static/css/: style.css
api/static/js/: app.js
scripts/: eval_memory.py  eval_task.py
src/cognitionflow/: __init__.py  agents.py  config.py  memory.py  orchestration.py
tests/: __init__.py  test_api.py  test_config.py  test_db.py  test_memory.py  test_orchestration.py
